--- a/src/pages/checkout.module.css
+++ b/src/pages/checkout.module.css
@@ -1,4 +1,4 @@
-/* checkout.module.css */
+
 
 .container {
     display: flex;
@@ -9,7 +9,9 @@
     padding: 2rem;
     justify-content: center;
     align-items: center;
+    
   }
+
   
   .checkoutSection {
     flex: 1;
@@ -343,3 +345,10 @@
     cursor: not-allowed;
     opacity: 0.7;
   }
+  @media (max-width:560px) {
+
+    .payments{
+      flex-direction: column;
+    }
+  }
+ 
